<resources>
    <string name="app_name">AMP</string>
    <string name="todo">TODO</string>
    <string name="sign_up">عضویت</string>
    <string name="create_a_new_account">ایجاد حساب کاربری جدید</string>
    <string name="full_name">نام و نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="pass1">کلمه عبور</string>
    <string name="pass2">تکرار کلمه عبور</string>
    <string name="join">عضویت</string>
    <string name="have_account">حساب کاربری دارید؟</string>
    <string name="login">وارد شوید!</string>
    <string name="splash_intro">به بهترین ها فکر کنید! خوش آمدید</string>
    <string name="enterText">ورود</string>
    <string name="enterText2">ورود به حساب کاربری</string>
    <string name="userName">نام کاربری (ایمیل)</string>
    <string name="password">کلمه عبور</string>
    <string name="text4">حساب کاربری ندارید؟</string>
    <string name="text5">عضو شوید!</string>
    <string name="profile_ch_2">علاقه مندی ها</string>
    <string name="profile_ch_1">نوشته ها</string>
    <string name="profile_tx1">علی خرامان</string>
    <string name="profile_tx2">طراح رابط و تجربه کاربری</string>
    <string name="profile_tx3">123</string>
    <string name="profile_tx4">نوشته</string>
    <string name="profile_tx5">2745</string>
    <string name="profile_tx6">دنبال کننده</string>
    <string name="profile_bt_fl">دنبال کردن</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testtext">یک بازی سرگرم کننده در سبک کژوال است که شما را به اعماق دریا می‌برد تا در نقش یک گربه، به صید ماهی بپردازید</string>
    <string name="testtext2">مدت‌ها است که شایعاتی از مدل ارزان‌تر ایکس ‌باکس سری ایکس به‌گوش می‌رسد که ایکس‌باکس سری اس نام دارد. البته این کنسول هنوز به‌صورت رسمی معرفی نشده و احتمال می‌رود در جریان رویداد انتهای ماه اوت مایکروسافت، به‌صورت رسمی معرفی شود</string>
    <string name="editArticle">ویرایش مقاله</string>
    <string name="deleteArticle">حذف مقاله</string>
    <string name="sendComment">ارسال دیدگاه</string>
    <string name="username2">نام کاربری</string>
    <string name="daysAgo">2 روز پیش</string>
    <string name="articleTitle">تیتر اولیه مقاله</string>
    <string name="articleText">متن مقاله</string>
    <string name="keyWords">کلید واژه ها</string>
    <string name="tab1">سرمایه گذاری</string>
    <string name="tab2">سهام</string>
    <string name="tab3">اقتصاد</string>
    <string name="tab4">apple</string>
    <string name="tab5">تکنولوژی</string>
    <string name="tab6">network</string>
    <string name="relatedArticles">مقالات مرتبط</string>
    <string name="userComments">دیدگاه کاربران</string>
    <string name="mainPage">صفحه اصلی</string>
    <string name="forYou">برای شما</string>
    <string name="searchArticle">جستجو مقاله</string>
    <string name="topCharts">برترین مقالات</string>
    <string name="profile">پروفایل</string>
    <string name="zero">0</string>
    <string name="writeArticle">نوشتن مقاله</string>
    <string name="preWrite">پیش نویس</string>
    <string name="label">عنوان</string>
    <string name="addPn">توضیحات</string>
    <string name="addMedia">افزودن عکس،ویدئو یا صدا</string>
    <string name="uploadFiles">بارگذاری فایل ها</string>
    <string name="keywords2">کلمه کلیدی</string>
    <string name="publishArticle">انتشار مقاله</string>
    <string name="singleArticle">تک مقاله</string>
    <string name="addchip">اضافه کردن</string>

</resources>