<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_gl_1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_gl_2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_gl_3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_gl_4"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_gl_5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_gl_6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_gl_7"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <ImageView
        android:src="@drawable/amplogo"
        android:scaleType="centerCrop"
        android:id="@+id/signup_logo"
        android:layout_width="150dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        app:layout_constraintTop_toBottomOf="@id/signup_gl_1"
        app:layout_constraintBottom_toTopOf="@id/signup_intro_1"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/signup_intro_1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/signup_logo"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        app:layout_constraintBottom_toTopOf="@id/signup_gl_7"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/signup_intro_2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/signup_intro_1"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        android:textSize="15sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"/>

    <TextView
        android:id="@+id/signup_tv_1"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/signup_gl_2"
        app:layout_constraintStart_toEndOf="@id/signup_tv_2"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/have_account"/>

    <TextView
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:id="@+id/signup_tv_2"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/signup_gl_2"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_tv_1"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/login"/>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/signup_et_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        app:layout_constraintTop_toBottomOf="@id/signup_gl_5"
        app:layout_constraintBottom_toTopOf="@id/signup_et_2"
        android:textColor="@android:color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:hint="@string/full_name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_et_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        app:layout_constraintTop_toBottomOf="@id/signup_et_1"
        app:layout_constraintBottom_toTopOf="@id/signup_et_3"
        android:textColor="@android:color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:hint="@string/email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_et_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        app:layout_constraintTop_toBottomOf="@id/signup_et_2"
        app:layout_constraintBottom_toTopOf="@id/signup_et_4"
        android:textColor="@android:color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:hint="@string/pass1"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_et_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        app:layout_constraintTop_toBottomOf="@id/signup_et_3"
        app:layout_constraintBottom_toTopOf="@id/signup_btn_1"
        android:textColor="@android:color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:hint="@string/pass2"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="10dp"
        android:id="@+id/signup_btn_1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@id/signup_gl_3"
        app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
        app:layout_constraintTop_toBottomOf="@id/signup_et_4"
        app:layout_constraintBottom_toTopOf="@id/signup_gl_6"
        android:text="@string/join"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@android:color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>