<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:rippleColor="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:cardCornerRadius="20dp"
    android:checkable="true"
    android:focusable="true"
    android:clickable="true"
    app:cardElevation="2dp"
    android:layoutDirection="rtl"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/home_page_gl_1_2"
            app:layout_constraintGuide_percent="0.15"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/summary_br_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:constraint_referenced_ids="summary_tv_2,summary_iv_1"
            app:barrierDirection="bottom"/>

        <com.pkmmte.view.CircularImageView
            android:id="@+id/summary_iv_1"
            app:border="true"
            app:border_width="1dp"
            android:src="@drawable/ic_baseline_person_24"
            app:border_color="@android:color/black"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/home_page_gl_1_2"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/summary_tv_1"
            android:layout_marginStart="4dp"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:text="@string/enterText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/home_page_gl_1_2"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/summary_tv_2"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintStart_toEndOf="@id/home_page_gl_1_2"
            app:layout_constraintTop_toBottomOf="@id/summary_tv_1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_margin="2dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/enterText2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/summary_tv_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary_br_1"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>