<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.a.amp.user.ui.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/signup_gl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/signup_gl_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/signup_gl_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/signup_gl_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/signup_gl_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/signup_gl_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.87" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/signup_gl_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <ImageView
            android:id="@+id/signup_logo"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/amplogo"
            app:layout_constraintBottom_toTopOf="@id/signup_intro_1"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_gl_1" />

        <TextView
            android:id="@+id/signup_intro_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/signup_gl_7"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_logo" />

        <TextView
            android:id="@+id/signup_intro_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_a_new_account"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_intro_1" />

        <TextView
            android:id="@+id/signup_tv_1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/have_account"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/signup_tv_2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_gl_2" />

        <TextView
            android:id="@+id/signup_tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_tv_1"
            app:layout_constraintTop_toBottomOf="@id/signup_gl_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_et_1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textColor="@android:color/black"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/signup_et_2"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_gl_5"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/iconbackgroundColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@={vm.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_et_2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/signup_et_3"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_et_1"
            app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
            app:startIconTint="@color/iconbackgroundColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:text="@={vm.username}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_et_3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass1"
            android:textColor="@android:color/black"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/signup_et_4"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_et_2"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/iconbackgroundColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="@={vm.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_et_4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass2"
            android:textColor="@android:color/black"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/iconbackgroundColor"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/signup_btn_1"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_et_3"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/iconbackgroundColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn_1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/join"
            android:textColorHint="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/signup_gl_6"
            app:layout_constraintEnd_toStartOf="@id/signup_gl_4"
            app:layout_constraintStart_toEndOf="@id/signup_gl_3"
            app:layout_constraintTop_toBottomOf="@id/signup_et_4" />

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_btn_1"
            app:visibleOnResult="@{vm.result2}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
